import new content

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -28,11 +28,11 @@
       {{ end }}
       <div id="page-body" class="row mt-5">
         {{ block "body" .}}
-          <div class="col-8">
+          <div class="col-8" id="main-infos">
             {{ block "main" .}}
             {{ end }}
           </div>
-          <aside class="col-4">
+          <aside class="col-4" id="related-infos">
             {{ block "aside" .}}
             {{partial "toc" .}}
             {{partial "apropos" .}}
