--- a/static/css/base.css
+++ b/static/css/base.css
@@ -67,3 +67,8 @@ nav.navbar .navbar-nav>li.nav-item > a.nav-link:hover {
   color: #3C99DC !important;
   font-weight: 500;
 }
+
+
+#main-infos ul>li {
+  margin-left: 15px !important;
+}
