--- a/layouts/partials/tags.html
+++ b/layouts/partials/tags.html
@@ -3,7 +3,7 @@
   <h1 class="w-50 h4 text-center mx-auto py-1 mb-3 border-top border-bottom">En un click!</h1>
   <ul class="list-inline text-center">
     {{ range . }}
-      <li class="list-inline-item mb-2">
+      <li class="list-inline-item mb-2 mx-0">
         <a class="btn btn-sm btn-tag" href="{{ .Page.Permalink }}">{{ .Page.Title }}</a>
       </li>
     {{ end }}
