--- a/static/css/base.css
+++ b/static/css/base.css
@@ -6,10 +6,9 @@ body {
   font-family: 'Droid Sans' !important;
 }
 
-h1, h2, h3, h4, h5, h6,
-.h1, .h2, .h3, .h4, .h5, .h6 {
-  font-family: 'Ubuntu' !important;
-  color: #3C99DC !important;
+p {
+  text-align: justify;
+  margin-bottom: 12px;
 }
 
 h1:first-letter, h2:first-letter, h3:first-letter,
@@ -19,27 +18,15 @@ h4:first-letter, h5:first-letter, h6:first-letter,
   text-transform: capitalize !important;
 }
 
-p {
-  text-align: justify;
-  margin-bottom: 12px;
+.container {
+  max-width: 1160px !important;
 }
 
 #page-header{
-  background-image: url('/images/blason.jpg');
+  /* background-image: url('/images/blason.jpg'); */
   background-position: center;
   background-repeat: no-repeat;
-}
-
-#page-header>div {
-  background-color: rgba(255, 255, 255, 0.45);
-}
-
-.story+.story{
-  border-left: 1px solid #3C99DC !important;
-}
-
-.container {
-  max-width: 1140px!important;
+  background-color: darkgrey;
 }
 
 .btn-tag, .btn-outline-tag:hover {
@@ -60,15 +47,4 @@ p {
 .btn-outline-prime:hover {
   background-color: #3C99DC !important;
   color: #ffffff !important;
-}
-
-nav.navbar .navbar-nav>li.nav-item.active > a.nav-link,
-nav.navbar .navbar-nav>li.nav-item > a.nav-link:hover {
-  color: #3C99DC !important;
-  font-weight: 500;
-}
-
-
-#main-infos ul>li {
-  margin-left: 15px !important;
 }
