--- a/layouts/partials/toc.html
+++ b/layouts/partials/toc.html
@@ -1,14 +1,12 @@
-{{ with $page := .}}
+{{ with $page := .Parent}}
   {{ if and (gt (len $page.Pages) 1) (not $page.IsHome) }}
     <section class="mb-3">
       <h1 class="w-50 h4 text-center mx-auto py-1 mb-3 border-top border-bottom">A lire</h1>
       <div class="list-group border-0">
-        {{ range $page.Pages }}
-          {{ if gt (len .Content) 0 }}
-          <a class="list-group-item border-0 py-1" href="{{ $page.Permalink }}#{{.File.UniqueID}}">
-            <span>{{ .Title }}</span>
-          </a>
-          {{ end }}
+        {{ range $page.Pages.ByWeight }}
+        <a class="list-group-item border-0 py-1" href="{{ $page.Permalink }}#{{.File.UniqueID}}">
+          <span>{{ .Title }}</span>
+        </a>
         {{ end }}
       </div>
     </section>
