--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>{{ block "title" . }}{{ .Site.Title }}{{ end }}</title>
     <link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Google+Sans:400,500,700">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/base.css"/>
   </head>
   <body style="padding-top:56px">
@@ -26,11 +26,11 @@
       {{ end }}
       <div id="page-body" class="row mt-5">
         {{ block "body" .}}
-          <div class="col-8" id="main-infos">
+          <div class="col-9" id="main-infos">
             {{ block "main" .}}
             {{ end }}
           </div>
-          <aside class="col-4" id="related-infos">
+          <aside class="col-3" id="related-infos">
             {{ block "aside" .}}
             {{partial "apropos" .}}
             {{partial "latest" .}}
@@ -47,5 +47,6 @@
       <em>mise à jour le {{now.Format "02-01-2006"}}</em>
     </p>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
   </body>
 </html>
