--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,12 +1,12 @@
-<div class="w-50 ms-auto d-flex align-items-center">
-  <div>
-  <h1>
-    <em>{{.Params.Subtitle}}</em>
-  </h1>
-  {{ if .Description }}
-    <h4>
-      <em>{{.Description}}</em>
-    </h4>
-  {{ end }}
+<div class="d-flex {{if not .Description}}align-items-center{{else}}align-items-end{{end}}">
+  <div id="page-title" class="w-50 ms-auto px-3 py-2">
+    {{if .Params.Subtitle}}
+    <h1>
+      <em>{{.Params.Subtitle}}</em>
+    </h1>
+    {{end}}
+    {{ if .Description }}
+    <h4>{{.Description}}</h4>
+    {{ end }}
   </div>
 </div>
