--- a/static/css/base.css
+++ b/static/css/base.css
@@ -3,7 +3,8 @@
 }
 
 body {
-  font-family: 'Droid Sans' !important;
+  /* font-family: 'Droid Sans' !important; */
+  font-family: 'sans-serif' !important;
 }
 
 p {
@@ -23,10 +24,20 @@ h4:first-letter, h5:first-letter, h6:first-letter,
 }
 
 #page-header{
-  /* background-image: url('/images/blason.jpg'); */
+  background-image: url('/images/blason.jpg');
   background-position: center;
   background-repeat: no-repeat;
-  background-color: darkgrey;
+  background-size: cover;
+}
+
+#header-overlay{
+  background: linear-gradient(to top, rgba(40, 40, 40, 0.5), transparent);
+}
+
+#page-title {
+  /* background: rgba(40, 40, 40, 0.3); */
+  color: white;
+  font-weight: bold !important;
 }
 
 .btn-tag, .btn-outline-tag:hover {
