--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/base.css"/>
   </head>
-  <body style="padding-top:56px">
+  <body style="padding-top:52px">
     {{partial "nav.html" .}}
     <header id="page-header">
       <div id="header-overlay">
@@ -42,12 +42,14 @@
         {{ end }}
       </div>
     </main>
-    <footer class="container border-top mt-5" id="page-footer">
-    {{ block "footer" . }}
-    {{ end }}
-    <p class="text-center text-muted mt-3">
-      <em>mise à jour le {{now.Format "02-01-2006"}}</em>
-    </p>
+    <footer id="page-footer" style="height:280px" class="d-flex align-items-end mt-5">
+      <div  class="container mt-5">
+        {{ block "footer" . }}
+        {{ end }}
+        <p class="text-center text-white mt-4 mb-1">
+          <strong>mise à jour le {{now.Format "02-01-2006"}}</strong>
+        </p>
+      </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
   </body>
