--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -5,18 +5,22 @@
     <p class="text-center">{{.}}</p>
   </section>
   {{end}}
-  <div class="row row-cols-1">
+  <div class="row row-cols-2">
     {{range $i, $p := .Pages.ByWeight}}
     <section class="col-6 mb-3" id="{{$p.File.UniqueID}}">
-      <div class="card border-0">
+      <div class="card">
+        {{if $p.Params.imglink}}
+        <img src="{{$p.Params.imglink}}" class="card-img-top">
+        {{else}}
         <img src="https://via.placeholder.com/360x240" class="card-img-top">
-        <div class="card-body">
+        {{end}}
+        <div class="card-body py-1">
           <h4 class="card-title">{{$p.Title}}</h4>
           <p>{{$p.Description}}</p>
+          <footer class="text-center">
+            <a href="{{$p.Permalink}}" class="btn btn-sm btn-outline-tag">en savoir plus</a>
+          </footer>
         </div>
-        <footer class="text-center">
-          <a href="{{$p.Permalink}}" class="btn btn-sm btn-outline-tag">en savoir plus</a>
-        </footer>
       </div>
     </section>
     {{if modBool (add $i 1) 2}}
