--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -18,7 +18,7 @@
           <h4 class="card-title">{{$p.Title}}</h4>
           <p>{{$p.Description}}</p>
           <footer class="text-center">
-            <a href="{{$p.Permalink}}" class="btn btn-sm btn-outline-tag">en savoir plus</a>
+            <a href="{{$p.Permalink}}" class="btn btn-link">en savoir plus</a>
           </footer>
         </div>
       </div>
