--- a/layouts/shortcodes/image.html
+++ b/layouts/shortcodes/image.html
@@ -1,4 +1,4 @@
 <img src="{{ .Get "source" }}"
   alt="{{.Get  "text"}}"
-  class="mx-auto d-block {{ if eq (.Get "float") "end"}}ms-3 float-end{{end}}"
+  class="mx-auto d-block my-3{{ if eq (.Get "float") "end"}} ms-3 float-end{{end}}{{ if eq (.Get "float") "start"}} me-3 float-start{{end}}"
   {{if ne (.Get "height") ""}}height="{{.Get "height"}}"{{end}}>
