rewrite document shortcode

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -3,7 +3,7 @@
   <header class="mb-5">
     <h1 class="h3">{{.Title}}</h1>
   </header>
-  <div>
+  <div class="">
     {{.Content}}
   </div>
 {{end}}
