--- a/static/css/base.css
+++ b/static/css/base.css
@@ -24,7 +24,7 @@ h4:first-letter, h5:first-letter, h6:first-letter,
 }
 
 #page-header{
-  background-image: url('/images/blason.jpg');
+  background-image: url('/images/grille.jpg');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
