dummy params for empty but mandatory file

--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -15,9 +15,11 @@
           {{if .Page.Params.dropdown}}
           <ul class="dropdown-menu">
             {{range .Page.Pages}}
+            {{ if not .Params.dummy }}
             <li>
               <a href="{{.Permalink}}" class="dropdown-item">{{.Title}}</a>
             </li>
+            {{end}}
             {{end}}
           </ul>
           {{end}}
