--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="/css/base.css"/>
   </head>
-  <body style="padding-top:52px">
+  <body>
     {{partial "nav.html" .}}
-    <header id="page-header">
-      <div id="header-overlay">
+    <header id="page-header" {{if .Page.IsHome}}style="min-height: 100vh"{{end}}>
+      <div id="header-overlay" {{if .Page.IsHome}}style="min-height: 100vh"{{end}}>
       {{ block "header" . }}
       <div class="container">
-        <div class="row" style="height:460px">
+        <div class="row" style="height:{{if .Page.IsHome}}100vh{{else}}460px{{end}}">
           {{partial "header.html" .}}
         </div>
       </div>
