--- a/layouts/shortcodes/documents.html
+++ b/layouts/shortcodes/documents.html
@@ -10,7 +10,7 @@
           <div class="card-body py-2 d-flex align-items-end text-center">
             {{if $d.location}}
             <a href="/documents/{{$d.location}}" class="btn stretched-link mx-auto" target="_blank">
-              <span>open</span>
+              <span>ouvrir</span>
             </a>
             {{end}}
           </div>
