edit class and attr

--- a/layouts/shortcodes/ephemerides.html
+++ b/layouts/shortcodes/ephemerides.html
@@ -6,8 +6,8 @@
         <tbody>
           {{ range .ephemeride }}
           <tr>
-            <th>{{.title}}</th>
-            <td>{{.date}}</td>
+            <th width="30%">{{.title}}</th>
+            <td width="40%">{{.date}}</td>
             <td>{{.note}}</td>
           </tr>
           {{ end }}
