--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="fr" class="h-100">
   <head>
     <meta charset="utf-8">
     <title>{{ block "title" . }}{{ .Site.Title }}{{ end }}</title>
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="/css/base.css"/>
   </head>
-  <body>
+  <body class="d-flex flex-column h-100">
     {{partial "nav.html" .}}
     <header id="page-header" {{if .Page.IsHome}}style="min-height: 100vh"{{end}}>
       <div id="header-overlay" {{if .Page.IsHome}}style="min-height: 100vh"{{end}}>
@@ -21,6 +21,7 @@
       {{ end }}
       </div>
     </header>
+    <div class="d-flex flex-shrink-0">
     <main class="container">
       {{ if .Site.Params.warning }}
         <aside class="alert alert-info my-5 w-75 mx-auto">
@@ -43,14 +44,17 @@
         {{ end }}
       </div>
     </main>
-    <footer id="page-footer" style="height:280px" class="d-flex align-items-end mt-5">
-      <div  class="container mt-5">
-        {{ block "footer" . }}
-        {{ end }}
-        <p class="text-center text-white mt-4 mb-1">
-          <strong>mise à jour le {{now.Format "02-01-2006"}}</strong>
-        </p>
-      </div>
+    </div>
+    <div class="mt-auto">
+      <footer id="page-footer" style="height:280px" class="d-flex align-items-end mt-5">
+        <div  class="container mt-5">
+          {{ block "footer" . }}
+          {{ end }}
+          <p class="text-center text-white mt-4 mb-1">
+            <strong>mise à jour le {{now.Format "02-01-2006"}}</strong>
+          </p>
+        </div>
+    </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
   </body>
