--- a/layouts/partials/latest.html
+++ b/layouts/partials/latest.html
@@ -1,4 +1,5 @@
 {{ with $page := .GetPage "actualités" }}
+{{if not $page.Draft}}
 <section class="mb-3">
   <h1 class="w-50 h4 text-center mx-auto py-1 mb-3 border-top border-bottom">A la une!</h1>
   <div class="list-group border-0">
@@ -7,4 +8,5 @@
     {{ end }}
   </div>
 </section>
+{{end}}
 {{ end }}
