--- a/static/css/base.css
+++ b/static/css/base.css
@@ -13,6 +13,12 @@ p {
   margin-bottom: 12px;
 }
 
+@media screen and (max-width: 1000px) {
+  p, li, a, td, th {
+    font-size: 1.25em !important;
+  }
+}
+
 h1:first-letter, h2:first-letter, h3:first-letter,
 h4:first-letter, h5:first-letter, h6:first-letter,
 .h1:first-letter, .h2:first-letter, .h3:first-letter,
