--- a/layouts/partials/breadcrumb.html
+++ b/layouts/partials/breadcrumb.html
@@ -1,4 +1,4 @@
-<nav style="--bs-breadcrumb-divider: '>';">
+<nav style="--bs-breadcrumb-divider: '>';" id="isja-breadcrumb">
   <ol class="breadcrumb">
     <li class="breadcrumb-item">
       <a href="{{.Site.Home.Permalink}}">Institut Saint-Joseph</a>
