--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -6,7 +6,7 @@
     </h1>
     {{end}}
     {{ if .Description }}
-    <h4>{{.Description}}</h4>
+    <h4 class="page-desc">{{.Description}}</h4>
     {{ end }}
   </div>
 </div>
