--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -1,14 +1,14 @@
 {{ $curr := .}}
-<nav class="navbar navbar-expand-lg navbar-light fixed-top bg-light border-bottom p-1">
+<nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom p-1">
   <div class="container">
     <a class="navbar-brand" href="{{.Site.Home.Permalink}}">
       <img src="/images/logo.png" alt="" width="25" height="30" class="d-inline-block align-text-top" style="position:relative; top:-5px">
-      <span class="ms-2">{{.Site.Title}}</span>
+      <span class="ms-2" id="isja-title">{{.Site.Title}}</span>
     </a>
-    <button class="navbar-toggler" style="border: 0!important" type="button" data-bs-toggle="collapse" data-bs-target="#nav-site" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span style="width:45px;height:45px" class="navbar-toggler-icon"></span>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#isjaNav" aria-controls="isjaNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="nav-site">
+    <div class="collapse navbar-collapse" id="isjaNav">
       <ul class="navbar-nav ms-auto">
         {{ range .Site.Menus.main }}
         <li class="nav-item {{if .Page.Params.dropdown}}dropdown{{end}}">
