--- a/layouts/shortcodes/team.html
+++ b/layouts/shortcodes/team.html
@@ -2,7 +2,7 @@
 <div class="row mb-3">
   <h5 class="text-center">Maternelles</h5>
   {{range $team.Maternelles}}
-  <div class="col-6">
+  <div class="col-12 col-lg-6">
     <table class="table table-sm">
       <thead>
         <tr>
@@ -31,7 +31,7 @@
 <div class="row">
   <h5 class="text-center">Primaires</h5>
   {{range $team.Primaires}}
-  <div class="col-6">
+  <div class="col-12 col-lg-6">
     <table class="table table-sm">
       <thead>
         <tr>
