--- a/static/css/base.css
+++ b/static/css/base.css
@@ -13,9 +13,19 @@ p {
   margin-bottom: 12px;
 }
 
-@media screen and (max-width: 1000px) {
-  p, li, a, td, th {
-    font-size: 1.25em !important;
+@media screen and (max-width: 768px) {
+  #latest-news, #isja-title, #isja-breadcrumb,
+  header .page-desc, .published {
+    display: none;
+  }
+  img {
+    max-width: 100%;
+    height: auto;
+  }
+}
+@media screen and (min-width: 768px) {
+  main .page-desc {
+    display: none;
   }
 }
 
@@ -24,10 +34,6 @@ h4:first-letter, h5:first-letter, h6:first-letter,
 .h1:first-letter, .h2:first-letter, .h3:first-letter,
 .h4:first-letter, .h5:first-letter, .h6:first-letter {
   text-transform: capitalize !important;
-}
-
-.container {
-  max-width: 1160px !important;
 }
 
 #page-header{
