adjustment subscription page for mobile

--- a/layouts/infos/inscription.html
+++ b/layouts/infos/inscription.html
@@ -1,19 +1,35 @@
 
 {{define "main"}}
 {{partial "breadcrumb.html" .}}
-<header class="mb-5">
+<header class="mb-3">
   <h1 class="h3">{{.Title}}</h1>
 </header>
 <div class="w-75 m-auto text-center" id="subscribe-intro">
   {{.Content}}
 </div>
-<div class="mt-5 position-relative">
+
+<div class="mt-5 position-relative" id="subscribe-std">
   {{with .Site.GetPage "section" "inscriptions"}}
     {{range $i, $p := .Pages.ByWeight}}
     {{ $left := not (modBool $i 2)}}
     <div class="col-6 {{if $left}}offset-6 border-start step-start{{else}}border-end step-end{{end}} border-3 border-primary d-flex align-items-center">
       <h1 class="bg-primary text-white position-absolute">{{add $i 1}}</h1>
       <div class="p-4 {{if $left}}step-start-body{{else}}step-end-body{{end}}">
+        <h1 class="h4">{{$p.Title}}</h1>
+        {{$p.Content}}
+      </div>
+    </div>
+    {{end}}
+  {{end}}
+</div>
+
+<div class="mt-5 position-relative" id="subscribe-mobile">
+  {{with .Site.GetPage "section" "inscriptions"}}
+    {{range $i, $p := .Pages.ByWeight}}
+    {{ $left := not (modBool $i 2)}}
+    <div class="step border-start border-3 border-primary d-flex align-items-center ms-4">
+      <h1 class="bg-primary text-white position-absolute">{{add $i 1}}</h1>
+      <div class="p-4 ps-5">
         <h1 class="h4">{{$p.Title}}</h1>
         {{$p.Content}}
       </div>
