--- a/layouts/partials/article.html
+++ b/layouts/partials/article.html
@@ -8,11 +8,16 @@
     </div>
     <div class="text-justify">{{.Content}}</div>
     {{ with .Resources.ByType "image" }}
-	<div class="d-flex justify-content-center align-items-center">
+	<div class="d-flex justify-content-center align-items-center image-screen">
   	{{ range . }}
   		<img src="{{ .RelPermalink }}" class="img-thumbnail enlarge mx-2" width="360">
   	{{ end }}
-  	</div>
+	</div>
+	<div class="image-mobile">
+  	{{ range . }}
+  		<img src="{{ .RelPermalink }}" class="img-thumbnail enlarge-sm my-2" width="360">
+  	{{ end }}
+	</div>
   {{ end }}
     <ul class="list-inline text-right mt-4">
       {{ range (.GetTerms "tags") }}
